# solmeet-9-nft-staking

./: Anchor.toml  README.md  package.json
initialization/: 0_setting.ts  1_writeToID.ts  2_initRarityInfo.ts  3_appendMint.ts  4_initPoolInfo.ts
migrations/: 0_setting.ts
migrations/initialization/: 1_createAndMintNFT.ts  1_writeToID.ts  2_initRarityInfo.ts  3_appendMint.ts  4_initPoolInfo.ts  5_logAllInfos.ts
programs/nft-rarity/: Cargo.toml
programs/nft-rarity/src/: lib.rs
programs/nft-staking/: Cargo.toml
programs/nft-staking/src/: lib.rs
tests-deploy/: 1_createAndMintNFT.ts  5_logAllInfos.ts
tests-v1/: 1_nft-staking-v1.ts
tests-v2/: 0_setting.ts  1_nft-staking-v2.ts
tests/v1/: 1_nft-staking-v1.ts
tests/v2/: 1_nft-staking-v2.ts
ts/: ids.ts  instruction.ts  poolInfos.ts  userInfos.ts  utils.ts
ts-v1/: index.ts  infos.ts  transaction.ts  utils.ts
ts/v1/: ids.ts  infos.ts  layout.ts  transaction.ts
ts/v2/: index.ts  instruction.ts  poolInfos.ts  transaction.ts  userInfos.ts
